back/src/main/java/com/example/capstone/global/error/GlobalExceptionHandler.java
package com.example.capstone.global.error;

public class GlobalExceptionHandler {
}
